# mwod

./: CMakeLists.txt  LICENSE  README.adoc
.devcontainer/: devcontainer.json
include/mwod/view/: view.h
src/: main.cc
src/view/: view.cc
test/: test_view.cc
